tests/errors/incorrect_type_where_02.f90
program main
   implicit none
   integer  :: b(5)

   where(1) b = 12121
   print *, b
end program main
